--- a/package.json
+++ b/package.json
@@ -75,5 +75,6 @@
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-declaration-strict-value": "^1.8.0",
     "typescript": "^4.4.2"
-  }
+  },
+  "proxy": "http://apis.data.go.kr/"
 }
